fix: don't use auto in overflow

--- a/themes/redefine/source/css/layout/article-content.styl
+++ b/themes/redefine/source/css/layout/article-content.styl
@@ -13,7 +13,7 @@ $gap = 30px
 
   +redefine-mobile()
     // Let mobile webpage has horizontal scroll. This will break RWD.
-    overflow-x auto
+    overflow-x scroll
 
 
   &.show-toc
